--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,11 +1,112 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shopify</title>
-</head>
-<body>
-  <h1>Hello Shopify</h1>
-</body>
-</html>
+{% extends 'main/base.html' %}
+{% load static %}
+{% block title %}Home{% endblock title %}
+
+{% block banner_slider %}
+<!--Banner Slider-->
+ <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="{% static 'main/images/banner/bg1.jpg' %}" class="d-block w-100" alt="..."> 
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'main/images/banner/bg2.jpg' %}" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </a>
+</div>
+<!-- End Banner Slider -->
+{% endblock banner_slider %}
+
+{% block livesale %}
+<!-- Live Sale Section -->
+<div class="container">
+  <div class="row bg-dark text-center p-5 text-white border-bottom shadow my-5">
+    <h1>SALE IS LIVE NOW</h1>
+    <span>Get 15% Instant Discount on credit and debit Card</span>
+    <small class="fw-lighter">Term and Condition Applied</small>
+  </div>
+</div> 
+<!-- End Live Sale Section -->
+{% endblock livesale %}
+
+{% block main-content %}
+<!-- 1st Product Slider -->
+<div class="m-3 px-5">
+ <h2>Shopify Deals of The Day</h2>
+ <!-- Slider 1 -->
+ <div class="owl-carousel" id="slider1">
+  <a href="#" class="btn"><div class="item"><img src="{% static 'main/images/product/1.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 1</span><br><span class="fs-5">Rs. 500</span></div></a>
+  <div class="item"><img src="{% static 'main/images/product/2.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 2</span><br><span class="fs-5">Rs. 300</span></div>
+  <div class="item"><img src="{% static 'main/images/product/3.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 3</span><br><span class="fs-5">Rs. 100</span></div>
+  <div class="item"><img src="{% static 'main/images/product/4.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 4</span><br><span class="fs-5">Rs. 700</span></div>
+  <div class="item"><img src="{% static 'main/images/product/5.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 5</span><br><span class="fs-5">Rs. 500</span></div>
+  <div class="item"><img src="{% static 'main/images/product/6.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 6</span><br><span class="fs-5">Rs. 400</span></div>
+  <div class="item"><img src="{% static 'main/images/product/7.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 7</span><br><span class="fs-5">Rs. 500</span></div>
+  <div class="item"><img src="{% static 'main/images/product/8.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 8</span><br><span class="fs-5">Rs. 300</span></div>
+  <div class="item"><img src="{% static 'main/images/product/9.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 9</span><br><span class="fs-5">Rs. 600</span></div>
+  <div class="item"><img src="{% static 'main/images/product/10.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 10</span><br><span class="fs-5">Rs. 900</span></div>
+  <div class="item"><img src="{% static 'main/images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 11</span><br><span class="fs-5">Rs. 100</span></div>
+  <div class="item"><img src="{% static 'main/images/product/12.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 12</span><br><span class="fs-5">Rs. 200</span></div>
+ </div>
+</div>
+<!-- End 1st Product Slider -->
+
+<!-- Payment Info Section -->
+<div class="container my-5">
+ <h2 class="py-4">Payment Methods</h2>
+ <div class="row">
+  <div class="col-sm-4">
+   <div class="card mb-3">
+     <div class="card-body">
+     <img src="{% static 'main/images/payment_methods/paypal.png' %}" alt="" srcset="" height="100px">
+     </div>
+   </div>
+  </div>
+  <div class="col-sm-4">
+   <div class="card mb-3">
+     <div class="card-body">
+      <img src="{% static 'main/images/payment_methods/payoneer.png' %}" alt="" srcset="" height="100px">
+     </div>
+   </div>
+  </div>
+  <div class="col-sm-4">
+   <div class="card mb-3">
+     <div class="card-body">
+      <img src="{% static 'main/images/payment_methods/google_pay.png' %}" alt="" srcset=""  height="100px">
+     </div>
+   </div>
+  </div>
+ </div>
+</div>
+<!-- End Payment Info Section -->
+
+<!-- 2nd Product Slider -->
+<div class="mx-3 px-5">
+ <h2>Trending Deals</h2>
+ <!-- Slider 2 -->
+ <div class="owl-carousel" id="slider2">
+  <div class="item"><img src="{% static 'main/images/product/12.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 1</span><br><span class="fs-5">Rs. 500</span></div>
+  <div class="item"><img src="{% static 'main/images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 2</span><br><span class="fs-5">Rs. 300</span></div>
+  <div class="item"><img src="{% static 'main/images/product/10.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 3</span><br><span class="fs-5">Rs. 100</span></div>
+  <div class="item"><img src="{% static 'main/images/product/9.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 4</span><br><span class="fs-5">Rs. 700</span></div>
+  <div class="item"><img src="{% static 'main/images/product/8.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 5</span><br><span class="fs-5">Rs. 500</span></div>
+  <div class="item"><img src="{% static 'main/images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 6</span><br><span class="fs-5">Rs. 400</span></div>
+  <div class="item"><img src="{% static 'main/images/product/5.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 7</span><br><span class="fs-5">Rs. 500</span></div>
+  <div class="item"><img src="{% static 'main/images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 8</span><br><span class="fs-5">Rs. 300</span></div>
+  <div class="item"><img src="{% static 'main/images/product/12.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 9</span><br><span class="fs-5">Rs. 600</span></div>
+  <div class="item"><img src="{% static 'main/images/product/7.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 10</span><br><span class="fs-5">Rs. 900</span></div>
+  <div class="item"><img src="{% static 'main/images/product/6.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 11</span><br><span class="fs-5">Rs. 100</span></div>
+  <div class="item"><img src="{% static 'main/images/product/10.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 12</span><br><span class="fs-5">Rs. 200</span></div>
+ </div>
+</div>
+<!-- End 2nd Product Slider -->
+{% endblock main-content %}
+
