--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -43,18 +43,18 @@
  <h2>Shopify Deals of The Day</h2>
  <!-- Slider 1 -->
  <div class="owl-carousel" id="slider1">
-  <a href="#" class="btn"><div class="item"><img src="{% static 'main/images/product/1.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 1</span><br><span class="fs-5">Rs. 500</span></div></a>
-  <div class="item"><img src="{% static 'main/images/product/2.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 2</span><br><span class="fs-5">Rs. 300</span></div>
-  <div class="item"><img src="{% static 'main/images/product/3.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 3</span><br><span class="fs-5">Rs. 100</span></div>
-  <div class="item"><img src="{% static 'main/images/product/4.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 4</span><br><span class="fs-5">Rs. 700</span></div>
-  <div class="item"><img src="{% static 'main/images/product/5.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 5</span><br><span class="fs-5">Rs. 500</span></div>
-  <div class="item"><img src="{% static 'main/images/product/6.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 6</span><br><span class="fs-5">Rs. 400</span></div>
-  <div class="item"><img src="{% static 'main/images/product/7.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 7</span><br><span class="fs-5">Rs. 500</span></div>
-  <div class="item"><img src="{% static 'main/images/product/8.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 8</span><br><span class="fs-5">Rs. 300</span></div>
-  <div class="item"><img src="{% static 'main/images/product/9.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 9</span><br><span class="fs-5">Rs. 600</span></div>
-  <div class="item"><img src="{% static 'main/images/product/10.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 10</span><br><span class="fs-5">Rs. 900</span></div>
-  <div class="item"><img src="{% static 'main/images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 11</span><br><span class="fs-5">Rs. 100</span></div>
-  <div class="item"><img src="{% static 'main/images/product/12.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 12</span><br><span class="fs-5">Rs. 200</span></div>
+  <a href="{% url 'product_detail' 1 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/1.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 1</span><br><span class="fs-5">€50</span></div></a>
+  <a href="{% url 'product_detail' 2 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/2.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 2</span><br><span class="fs-5">€30</span></div></a>
+  <a href="{% url 'product_detail' 3 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/3.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 3</span><br><span class="fs-5">€10</span></div></a>
+  <a href="{% url 'product_detail' 4 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/4.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 4</span><br><span class="fs-5">€70</span></div></a>
+  <a href="{% url 'product_detail' 5 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/5.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 5</span><br><span class="fs-5">€50</span></div></a>
+  <a href="{% url 'product_detail' 6 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/6.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 6</span><br><span class="fs-5">€40</span></div></a>
+  <a href="{% url 'product_detail' 7 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/7.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 7</span><br><span class="fs-5">€50</span></div></a>
+  <a href="{% url 'product_detail' 8 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/8.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 8</span><br><span class="fs-5">€30</span></div></a>
+  <a href="{% url 'product_detail' 9 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/9.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 9</span><br><span class="fs-5">€60</span></div></a>
+  <a href="{% url 'product_detail' 10 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/10.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 10</span><br><span class="fs-5">€90</span></div></a>
+  <a href="{% url 'product_detail' 11 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 11</span><br><span class="fs-5">€10</span></div></a>
+  <a href="{% url 'product_detail' 12 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/12.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 12</span><br><span class="fs-5">€20</span></div></a>
  </div>
 </div>
 <!-- End 1st Product Slider -->
@@ -93,18 +93,18 @@
  <h2>Trending Deals</h2>
  <!-- Slider 2 -->
  <div class="owl-carousel" id="slider2">
-  <div class="item"><img src="{% static 'main/images/product/12.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 1</span><br><span class="fs-5">Rs. 500</span></div>
-  <div class="item"><img src="{% static 'main/images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 2</span><br><span class="fs-5">Rs. 300</span></div>
-  <div class="item"><img src="{% static 'main/images/product/10.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 3</span><br><span class="fs-5">Rs. 100</span></div>
-  <div class="item"><img src="{% static 'main/images/product/9.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 4</span><br><span class="fs-5">Rs. 700</span></div>
-  <div class="item"><img src="{% static 'main/images/product/8.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 5</span><br><span class="fs-5">Rs. 500</span></div>
-  <div class="item"><img src="{% static 'main/images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 6</span><br><span class="fs-5">Rs. 400</span></div>
-  <div class="item"><img src="{% static 'main/images/product/5.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 7</span><br><span class="fs-5">Rs. 500</span></div>
-  <div class="item"><img src="{% static 'main/images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 8</span><br><span class="fs-5">Rs. 300</span></div>
-  <div class="item"><img src="{% static 'main/images/product/12.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 9</span><br><span class="fs-5">Rs. 600</span></div>
-  <div class="item"><img src="{% static 'main/images/product/7.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 10</span><br><span class="fs-5">Rs. 900</span></div>
-  <div class="item"><img src="{% static 'main/images/product/6.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 11</span><br><span class="fs-5">Rs. 100</span></div>
-  <div class="item"><img src="{% static 'main/images/product/10.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 12</span><br><span class="fs-5">Rs. 200</span></div>
+  <a href="{% url 'product_detail' 12 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/12.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 1</span><br><span class="fs-5">€50</span></div></a>
+  <a href="{% url 'product_detail' 11 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 2</span><br><span class="fs-5">€30</span></div></a>
+  <a href="{% url 'product_detail' 10 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/10.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 3</span><br><span class="fs-5">€10</span></div></a>
+  <a href="{% url 'product_detail' 9 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/9.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 4</span><br><span class="fs-5">€70</span></div></a>
+  <a href="{% url 'product_detail' 8 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/8.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 5</span><br><span class="fs-5">€50</span></div></a>
+  <a href="{% url 'product_detail' 11 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 6</span><br><span class="fs-5">€40</span></div></a>
+  <a href="{% url 'product_detail' 5 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/5.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 7</span><br><span class="fs-5">€50</span></div></a>
+  <a href="{% url 'product_detail' 11 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/11.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 8</span><br><span class="fs-5">€30</span></div></a>
+  <a href="{% url 'product_detail' 12 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/12.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 9</span><br><span class="fs-5">€60</span></div></a>
+  <a href="{% url 'product_detail' 7 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/7.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 10</span><br><span class="fs-5">€90</span></div></a>
+  <a href="{% url 'product_detail' 6 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/6.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 11</span><br><span class="fs-5">€10</span></div></a>
+  <a href="{% url 'product_detail' 10 %}" class="btn"><div class="item"><img src="{% static 'main/images/product/10.jpg' %}" alt="" height="200px"><span class="fw-bold">Product 12</span><br><span class="fs-5">€20</span></div></a>
  </div>
 </div>
 <!-- End 2nd Product Slider -->
