Design cart page

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -66,7 +66,7 @@
               </ul>
             </li>
             <li class="nav-item mx-2">
-             <a href="#" class="nav-link text-white"><span class="badge bg-danger">4</span> Cart </a>
+             <a href="{% url 'add_to_cart' %}" class="nav-link text-white"><span class="badge bg-danger">4</span> Cart </a>
             </li>
             <li class="nav-item mx-2">
              <a href="#" class="nav-link text-white">Login</a>
