Design buy now page

--- a/main/templates/main/product_detail.html
+++ b/main/templates/main/product_detail.html
@@ -12,8 +12,8 @@
    <hr>
    <p><strong>Product Description:</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, at. Dignissimos rerum incidunt temporibus laudantium. Rem, eveniet corporis. Itaque delectus quae nesciunt nemo, maiores minus deserunt vel. Vero, nulla quisquam!</p> <br>
    <h4>139€ <small class="fw-light text-decoration-line-through">159€</small></h4> <br>
-   <a href="#" class="btn btn-dark shadow px-5 py-2">Add to Cart</a>
-   <a href="#" class="btn btn-dark shadow px-5 py-2 ms-4">Buy Now</a>
+   <a href="{% url 'add_to_cart' %}" class="btn btn-dark shadow px-5 py-2">Add to Cart</a>
+   <a href="{% url 'buy_now' %}" class="btn btn-dark shadow px-5 py-2 ms-4">Buy Now</a>
    <h5 class="mt-5">Available Offers</h5>
    <ul>
     <li>Bank Offer 5% Unlimited Cashback on Mastercard</li>
