--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -59,7 +59,7 @@
                 ShahBakht
               </a>
               <ul class="dropdown-menu" aria-labelledby="profileDropdown">
-                <li><a class="dropdown-item" href="#">Profile</a></li>
+                <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
                 <li><a class="dropdown-item" href="#">Orders</a></li>
                 <li><a class="dropdown-item" href="#">Change Password</a></li>
                 <li><a class="dropdown-item" href="#">Logout</a></li>
