--- a/main/templates/main/profile.html
+++ b/main/templates/main/profile.html
@@ -8,7 +8,7 @@
   <div class="col-sm-2 border-end">
    <ul class="list-unstyled">
     <li class="d-grid"><a href="{% url 'profile' %}" class="btn btn-dark mb-2">Profile</a></li>
-    <li class="d-grid"><a href="#" class="btn btn-outline-dark">Address</a></li>
+    <li class="d-grid"><a href="{% url 'address' %}" class="btn btn-outline-dark">Address</a></li>
    </ul>
   </div>
   <div class="col-sm-8 offset-sm-1">
