--- a/main/templates/main/add_to_cart.html
+++ b/main/templates/main/add_to_cart.html
@@ -66,7 +66,7 @@
          <span><strong>€ 50.00</strong></span>
        </li>
       </ul>
-      <div class="d-grid"><a href="#" class="btn btn-primary">Place Order</a></div>
+      <div class="d-grid"><a href="{% url 'checkout' %}" class="btn btn-primary">Place Order</a></div>
     </div>
    </div>
   </div>
