Design mobile category page

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -38,7 +38,7 @@
                Gadgets
              </a>
              <ul class="dropdown-menu" aria-labelledby="electronicsDropdown">
-               <li><a class="dropdown-item" href="#">Mobile</a></li>
+               <li><a class="dropdown-item" href="{% url 'mobile_category' %}">Mobile</a></li>
                <li><a class="dropdown-item" href="#">Laptop</a></li>
              </ul>
            </li>
