--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -72,7 +72,7 @@
              <a href="#" class="nav-link text-white">Login</a>
             </li>
             <li class="nav-item mx-2">
-             <a href="#" class="nav-link text-white">Registration</a>
+             <a href="{% url 'registration' %}" class="nav-link text-white">Registration</a>
             </li>
           </ul>
          </div>
