Design login page

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -69,7 +69,7 @@
              <a href="{% url 'add_to_cart' %}" class="nav-link text-white"><span class="badge bg-danger">4</span> Cart </a>
             </li>
             <li class="nav-item mx-2">
-             <a href="#" class="nav-link text-white">Login</a>
+             <a href="{% url 'login' %}" class="nav-link text-white">Login</a>
             </li>
             <li class="nav-item mx-2">
              <a href="{% url 'registration' %}" class="nav-link text-white">Registration</a>
