--- a/main/templates/main/product_detail.html
+++ b/main/templates/main/product_detail.html
@@ -5,13 +5,13 @@
 <div class="container my-5">
  <div class="row">
   <div class="col-sm-6 text-center align-self-center">
-   <img src="{% static image_url %}" alt="" class="img-fluid img-thumbnail">
+   <img src="{{ product.product_image.url }}" alt="" class="img-fluid img-thumbnail">
   </div>
   <div class="col-sm-5 offset-sm-1">
-   <h2>Product Title: Product {{ id }}</h2>
+   <h2>{{ product.title }}</h2>
    <hr>
-   <p><strong>Product Description:</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, at. Dignissimos rerum incidunt temporibus laudantium. Rem, eveniet corporis. Itaque delectus quae nesciunt nemo, maiores minus deserunt vel. Vero, nulla quisquam!</p> <br>
-   <h4>139€ <small class="fw-light text-decoration-line-through">159€</small></h4> <br>
+   <p><strong>Description:</strong> {{ product.description }} </p> <br>
+   <h4>{{product.selling_price }}€ <small class="fw-light text-decoration-line-through">{{ product.discounted_price }}€</small></h4> <br>
    <a href="{% url 'add_to_cart' %}" class="btn btn-dark shadow px-5 py-2">Add to Cart</a>
    <a href="{% url 'buy_now' %}" class="btn btn-dark shadow px-5 py-2 ms-4">Buy Now</a>
    <h5 class="mt-5">Available Offers</h5>
