Fetch data dynamically and added brand filter

--- a/main/templates/main/mobile_category.html
+++ b/main/templates/main/mobile_category.html
@@ -5,10 +5,26 @@
 <div class="container my-5">
  <div class="row">
   <div class="col-sm-3">
-   Side Bar for Mobile filter
+   <h3>Mobile Filters</h3>
+   <ul class="list-group">
+    <li class="list-group-item"><a href="{% url 'mobile_category_index' %}" class="btn">All Mobile</a></li>
+    <li class="list-group-item"><a href="{% url 'mobile_category' 'apple' %}" class="btn">Apple</a></li>
+    <li class="list-group-item"><a href="{% url 'mobile_category' 'samsung' %}" class="btn">Samsung</a></li>
+  </ul>
   </div>
-  <div class="col-sm-8 offset-sm-1">
-   Mobile Product List
+  <div class="col-sm-8 offset-sm-1 d-flex flex-wrap">
+    {% if mobiles %}
+      {% for mobile in mobiles %}
+        <div class="card mx-1 my-1" style="width: 20rem;">
+          <img src="{{ mobile.product_image.url }}" alt="Card image cap" width="100%" height="300px">
+          <div class="card-body">
+            <h5 class="card-title">{{ mobile.title }}</h5>
+            <p class="card-text">{{ mobile.selling_price }}€</p>
+            <a href="{% url 'product_detail' mobile.id %}" class="btn btn-outline-dark">Details</a>
+          </div>
+        </div>
+      {% endfor %}
+    {% endif %}
   </div>
  </div>
 </div>
