--- a/main/templates/main/mobile_category.html
+++ b/main/templates/main/mobile_category.html
@@ -10,6 +10,8 @@
     <li class="list-group-item"><a href="{% url 'mobile_category_index' %}" class="btn">All Mobile</a></li>
     <li class="list-group-item"><a href="{% url 'mobile_category' 'apple' %}" class="btn">Apple</a></li>
     <li class="list-group-item"><a href="{% url 'mobile_category' 'samsung' %}" class="btn">Samsung</a></li>
+    <li class="list-group-item"><a href="{% url 'mobile_category' 'less_than_300' %}" class="btn">Less than 300</a></li>
+    <li class="list-group-item"><a href="{% url 'mobile_category' 'less_than_500' %}" class="btn">Less than 500</a></li>
   </ul>
   </div>
   <div class="col-sm-8 offset-sm-1 d-flex flex-wrap">
