--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -39,7 +39,7 @@
              </a>
              <ul class="dropdown-menu" aria-labelledby="electronicsDropdown">
                <li><a class="dropdown-item" href="{% url 'mobile_category_index' %}">Mobile</a></li>
-               <li><a class="dropdown-item" href="#">Laptop</a></li>
+               <li><a class="dropdown-item" href="{% url 'laptop_category_index' %}">Laptop</a></li>
              </ul>
            </li>
            <li class="nav-item dropdown">
