--- a/main/templates/main/registration.html
+++ b/main/templates/main/registration.html
@@ -6,22 +6,14 @@
  <div class="row my-3">
   <div class="col-sm-6 offset-sm-3">
    <h3>Customer Registration</h3>
-   <hr>
-
    <form action="" method="post" novalidate class="shadow p-5">
-    <div class="mb-3">
-     <label for="inputEmail4" class="form-label">Email</label>
-     <input type="email" class="form-control" id="inputEmail4">
-     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-    </div>
-    <div class="mb-3">
-     <label for="inputPassword1" class="form-label">Password</label>
-     <input type="password" class="form-control" id="inputPassword1">
-    </div>
-    <div class="mb-3">
-     <label for="inputPassword2" class="form-label">Confirm Password</label>
-     <input type="password" class="form-control" id="inputPassword2">
-    </div>
+    {% for fm in form %}
+      <div class="mb-3 form-group">
+        {{fm.label_tag}} 
+        {{ fm }} 
+        <small class="text-danger">{{ fm.errors|striptags }}</small>
+      </div>
+    {% endfor %}
     <div class="text-end">
      <button type="button" class="btn btn-danger">Submit</button>
     </div>
