--- a/main/templates/main/registration.html
+++ b/main/templates/main/registration.html
@@ -6,7 +6,13 @@
  <div class="row my-3">
   <div class="col-sm-6 offset-sm-3">
    <h3>Customer Registration</h3>
-   <form action="" method="post" novalidate class="shadow p-5">
+   {% if messages %}
+    {% for message in messages %}
+      <p {% if message.tags %} class="alert alert-{{message.tags}} mb-2" {% endif %}>{{ message }}</p>
+    {% endfor %}
+   {% endif %}
+   <form action="{% url 'registration' %}" method="post" novalidate class="shadow p-5">
+    {% csrf_token %}
     {% for fm in form %}
       <div class="mb-3 form-group">
         {{fm.label_tag}} 
@@ -15,7 +21,7 @@
       </div>
     {% endfor %}
     <div class="text-end">
-     <button type="button" class="btn btn-danger">Submit</button>
+      <input type="submit" class="btn btn-danger" value="Register User">
     </div>
     <br>
     <div class="text-center text-primary fw-bold">
