--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -6,16 +6,25 @@
  <div class="row my-3">
   <div class="col-sm-6 offset-sm-3">
    <h3>Login</h3>
-   <hr>
-   <form action="" method="post" novalidate class="shadow p-5">
-    <div class="mb-3">
-     <label for="exampleInputEmail1" class="form-label">Email</label>
-     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    </div>
-    <div class="mb-3">
-     <label for="exampleInputPassword1" class="form-label">Password</label>
-     <input type="password" class="form-control" id="exampleInputPassword1">
-    </div>
+   {% if messages %}
+    {% for message in messages %}
+      <p {% if message.tags %} class="alert alert-{{message.tags}} mb-2" {% endif %}>{{ message }}</p>
+    {% endfor %}
+   {% endif %}
+   {% if form.non_field_errors %}
+      {% for error in form.non_field_errors %}
+        <p class="alert alert-danger my-3">{{error}}</p>
+      {% endfor %}
+    {% endif %}
+   <form action="{% url 'login' %}" method="post" novalidate class="shadow p-5">
+    {% csrf_token %}
+    {% for fm in form %}
+      <div class="mb-3 form-group">
+        {{fm.label_tag}} 
+        {{ fm }} 
+        <small class="text-danger">{{ fm.errors|striptags }}</small>
+      </div>
+    {% endfor %}
     <small><a href="#">Forgot Password ?</a></small> <br>
     <input type="submit" class="btn btn-primary mt-4" value="Login">
     <br>
