Password update feature

--- a/main/templates/main/password_change.html
+++ b/main/templates/main/password_change.html
@@ -4,28 +4,28 @@
 {% block main-content %}
 <div class="container my-5">
  <div class="row">
- <h3>Welcome ShahBakht</h3>
+ <h3>Welcome {{request.user.username | capfirst}}</h3>
   <div class="col-sm-2 border-end">
    <ul class="list-unstyled">
     <li class="d-grid"><a href="{% url 'profile' %}" class="btn btn-dark">Change Password</a></li>
    </ul>
   </div>
   <div class="col-sm-9 offset-sm-1">
-   <form>
-     <div class="mb-3">
-       <label for="exampleInputEmail1" class="form-label">Email address</label>
-       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-     </div>
-     <div class="mb-3">
-       <label for="exampleInputPassword1" class="form-label">New Password</label>
-       <input type="password" class="form-control" id="exampleInputPassword1">
-     </div>
-     <div class="mb-3">
-       <label for="exampleInputPassword1" class="form-label">Confirm New Password</label>
-       <input type="password" class="form-control" id="exampleInputPassword1">
-     </div>
-     <button type="submit" class="btn btn-dark">Submit</button>
-   </form>
+    {% if messages %}
+      {% for message in messages %}
+        <p {% if message.tags %} class="alert alert-{{message.tags}} mb-2" {% endif %}>{{ message }}</p>
+      {% endfor %}
+    {% endif %}
+   <form action="{% url 'password_change' %}" method="post" novalidate>
+    {% csrf_token %}
+    {% for fm in form %}
+      <div class="mb-3 form-group">
+        {{fm.label_tag}} 
+        {{ fm }} 
+        <small class="text-danger">{{ fm.errors|striptags }}</small>
+      </div>
+    {% endfor %}
+    <input type="submit" class="btn btn-dark" value="Update Password">
   </div>
  </div>
 </div>
