--- a/main/templates/main/profile.html
+++ b/main/templates/main/profile.html
@@ -12,38 +12,24 @@
    </ul>
   </div>
   <div class="col-sm-8 offset-sm-1">
-   <form action="" method="post">
+   <form action="{% url 'profile' %}" method="post" novalidate>
     {% csrf_token %}
-    <div class="col-12 mb-2">
-      <label for="inputName" class="form-label">Name</label>
-      <input type="text" class="form-control" id="inputEmail">
+    {% for fm in form %}
+      <div class="mb-3 form-group">
+        {{fm.label_tag}} 
+        {{ fm }} 
+        <small class="text-danger">{{ fm.errors|striptags }}</small>
+      </div>
+    {% endfor %}
+    <div class="text-start">
+      <input type="submit" class="btn btn-dark" value="Add Address">
     </div>
-    <div class="col-12 mb-2">
-      <label for="inputAddress" class="form-label">Address</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-    </div>
-    <div class="col-12 mb-2">
-      <label for="inputAddress2" class="form-label">Address 2</label>
-      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-    </div>
-    <div class="col-12 mb-2">
-      <label for="inputCity" class="form-label">City</label>
-      <input type="text" class="form-control" id="inputCity">
-    </div>
-    <div class="col-md-4 mb-2">
-      <label for="inputState" class="form-label">State</label>
-      <select id="inputState" class="form-select">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
-    </div>
-    <div class="col-md-2 mb-2">
-      <label for="inputZip" class="form-label">Zip</label>
-      <input type="text" class="form-control" id="inputZip">
-    </div>
-    <div class="col-12 mt-3">
-      <button type="submit" class="btn btn-dark">Update Profile</button>
-    </div>
+    <br>
+    {% if form.non_field_errors %}
+      {% for error in form.non_field_errors %}
+        <p class="alert alert-danger my-3">{{error}}</p>
+      {% endfor %}
+    {% endif %}
    </form>
   </div>
  </div>
