--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -55,7 +55,7 @@
          <div>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item mx-2">
-              <a href="{% url 'add_to_cart' %}" class="nav-link text-white"><span class="badge bg-danger">4</span> Cart </a>
+              <a href="{% url 'shopping_cart' %}" class="nav-link text-white"><span class="badge bg-danger">4</span> Cart </a>
             </li>
           {% if request.user.is_authenticated %}
             <li class="nav-item dropdown mx-2">
