--- a/main/templates/main/shopping_cart.html
+++ b/main/templates/main/shopping_cart.html
@@ -8,68 +8,57 @@
   <div class="col-sm-8">
   <div class="card">
    <div class="card-body">
-    <h3>Cart</h3>
-    <div class="row">
-     <div class="col-sm-3 text-center align-self-center"><img src="{% static 'main/images/product/1.jpg'%}" alt="" srcset="" class="img-fluid img-thumbnail shadow-sm" height="150" width="150"> </div>
-     <div class="col-sm-9">
-      <div>
-       <h5>Product 1</h5>
-       <p class="mb-2 text-muted small">Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quas, nihil vel velit sed, quos consequatur maiores odio libero eius est in mollitia quo minus dolorum culpa consectetur, ipsam unde!</p>
-       <div class="my-3">
-        <label for="quantity">Quantity:</label>
-        <a class="minus-cart btn"><i class="fas fa-minus-square fa-lg"></i></a>
-          <span id="quantity">3</span>
-        <a class="plus-cart btn"><i class="fas fa-plus-square fa-lg"></i></a>
-       </div> 
-       <div class="d-flex justify-content-between">
-        <a href="#" class="btn btn-sm btn-secondary mr-3">Remove item </a>
-        <p class="mb-0"><span><strong>€ 11.00</strong></span></p>
-       </div>
+     {% if cart_items %}
+      <h3 class="text-center">Cart</h3>
+      {% for item in cart_items %}
+      <div class="row my-2">
+      <div class="col-sm-3 text-center align-self-center"> <img src="{{ item.product.product_image.url }}" alt="" srcset="" class="img-fluid img-thumbnail shadow-sm" height="150" width="150"></div>
+      <div class="col-sm-9"> 
+        <div>
+        <h5>{{ item.product.title }}</h5>
+        <p class="mb-2 text-muted small"><strong>Description:</strong> {{ item.product.description }}</p>
+        <div class="my-3">
+          <label for="quantity">Quantity:</label>
+          <a class="minus-cart btn"><i class="fas fa-minus-square fa-lg"></i></a>
+            <span id="quantity">{{item.quantity}}</span>
+          <a class="plus-cart btn"><i class="fas fa-plus-square fa-lg"></i></a>
+        </div> 
+        <div class="d-flex justify-content-between">
+          <a href="#" class="btn btn-sm btn-danger mr-3">Remove item </a>        
+          <p class="mb-0"><span><strong>€ {{ item.product.discounted_price }}</strong></span></p>
+        </div>
+        </div>
       </div>
-     </div>
-    </div>
-    <hr class="text-muted">
-    <div class="row my-5">
-     <div class="col-sm-3 text-center align-self-center"> <img src="{% static 'main/images/product/2.jpg'%}" alt="" srcset="" class="img-fluid img-thumbnail shadow-sm" height="150" width="150"></div>
-     <div class="col-sm-9"> 
-      <div>
-       <h5>Product 2</h5>
-       <p class="mb-2 text-muted small">Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio corrupti repudiandae quas tenetur? Vel harum iste impedit ad cupiditate sint soluta consequuntur sed, enim, eligendi labore molestiae! Mollitia, ad exercitationem!</p>
-       <div class="my-3">
-        <label for="quantity">Quantity:</label>
-        <a class="minus-cart btn"><i class="fas fa-minus-square fa-lg"></i></a>
-          <span id="quantity">2</span>
-        <a class="plus-cart btn"><i class="fas fa-plus-square fa-lg"></i></a>
-       </div> 
-       <div class="d-flex justify-content-between">
-        <a href="#" class="btn btn-sm btn-secondary mr-3">Remove item </a>        
-        <p class="mb-0"><span><strong>€ 32.00</strong></span></p>
-       </div>
       </div>
-     </div>
-    </div>
+      <hr class="text-muted">
+      {% endfor %}
+    {% else %}
+      <h3 class="text-center">Your Cart is empty</h3>
+    {% endif %}
    </div>
    </div>
   </div>
 
-  <div class="col-sm-4">
-   <div class="card">
-    <div class="card-body">
-      <h3>The Total Amount of</h3>
-      <ul class="list-group">
-       <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount<span>€ 43.00</span></li>
-       <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">Shipping<span>€ 7.00</span></li>
-       <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-        <div>
-           <strong>Total</strong> <small>(including VAT)</small>
-         </div>
-         <span><strong>€ 50.00</strong></span>
-       </li>
-      </ul>
-      <div class="d-grid"><a href="{% url 'checkout' %}" class="btn btn-primary">Place Order</a></div>
+  {% if cart_items %}
+    <div class="col-sm-4">
+    <div class="card">
+      <div class="card-body">
+        <h3>The Total Amount of</h3>
+        <ul class="list-group">
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount<span>€ 43.00</span></li>
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">Shipping<span>€ 7.00</span></li>
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+          <div>
+            <strong>Total</strong> <small>(including VAT)</small>
+          </div>
+          <span><strong>€ 50.00</strong></span>
+        </li>
+        </ul>
+        <div class="d-grid"><a href="{% url 'checkout' %}" class="btn btn-primary">Place Order</a></div>
+      </div>
     </div>
-   </div>
-  </div>
+    </div>
+  {% endif %}
   
  </div>
 </div>
