--- a/main/templates/main/shopping_cart.html
+++ b/main/templates/main/shopping_cart.html
@@ -45,13 +45,13 @@
       <div class="card-body">
         <h3>The Total Amount of</h3>
         <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount<span>€ 43.00</span></li>
-        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">Shipping<span>€ 7.00</span></li>
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount<span>€ {{ amount_without_shipping }}</span></li>
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">Shipping<span>€ {{ shipping }}</span></li>
         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
           <div>
-            <strong>Total</strong> <small>(including VAT)</small>
+            <strong>Total</strong> <small>(including Tax)</small>
           </div>
-          <span><strong>€ 50.00</strong></span>
+          <span><strong>€ {{ amount_with_shipping }}</strong></span>
         </li>
         </ul>
         <div class="d-grid"><a href="{% url 'checkout' %}" class="btn btn-primary">Place Order</a></div>
