--- a/main/templates/main/shopping_cart.html
+++ b/main/templates/main/shopping_cart.html
@@ -17,7 +17,8 @@
         <div>
         <h5>{{ item.product.title }}</h5>
         <p class="mb-2 text-muted small"><strong>Description:</strong> {{ item.product.description }}</p>
-        <div class="my-3">
+        <div class="my-3" id="action-buttons">
+          <span id="product-id" class="d-none">{{item.product.id}}</span>
           <label for="quantity">Quantity:</label>
           <a class="minus-cart btn"><i class="fas fa-minus-square fa-lg"></i></a>
             <span id="quantity">{{item.quantity}}</span>
@@ -45,13 +46,13 @@
       <div class="card-body">
         <h3>The Total Amount of</h3>
         <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount<span>€ {{ amount_without_shipping }}</span></li>
-        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">Shipping<span>€ {{ shipping }}</span></li>
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount<span id="amount_without_shipping">€ {{ amount_without_shipping }}</span></li>
+        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">Shipping<span id="shipping">€ {{ shipping }}</span></li>
         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
           <div>
             <strong>Total</strong> <small>(including Tax)</small>
           </div>
-          <span><strong>€ {{ amount_with_shipping }}</strong></span>
+          <span><strong id="amount_with_shipping">€ {{ amount_with_shipping }}</strong></span>
         </li>
         </ul>
         <div class="d-grid"><a href="{% url 'checkout' %}" class="btn btn-primary">Place Order</a></div>
