--- a/main/templates/main/shopping_cart.html
+++ b/main/templates/main/shopping_cart.html
@@ -23,10 +23,10 @@
           <a class="minus-cart btn"><i class="fas fa-minus-square fa-lg"></i></a>
             <span id="quantity">{{item.quantity}}</span>
           <a class="plus-cart btn"><i class="fas fa-plus-square fa-lg"></i></a>
+          <a class="remove-cart-item btn btn-sm btn-danger mr-3">Remove item </a>  
         </div> 
-        <div class="d-flex justify-content-between">
-          <a href="#" class="btn btn-sm btn-danger mr-3">Remove item </a>        
-          <p class="mb-0"><span><strong>€ {{ item.product.discounted_price }}</strong></span></p>
+        <div class="d-flex justify-content-between">      
+          <p class="mb-0"><span><strong>Price: € {{ item.product.discounted_price }}</strong></span></p>
         </div>
         </div>
       </div>
