--- a/main/templates/main/checkout.html
+++ b/main/templates/main/checkout.html
@@ -24,7 +24,7 @@
     <div class="col-sm-4 offset-sm-1">
       <h4>User's Addresses</h4>
       <hr>
-      <form action="">
+      <form action="{% url 'confirm_order' %}">
         {% for address in addresses %}
         <div class="card my-2">
           <div class="card-body">
